--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <button id="restart-btn" class="hidden">Restart</button>
     </div>
 
-    <script src="connect4.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
